--- a/test/public/test4/styles.css
+++ b/test/public/test4/styles.css
@@ -7,3 +7,18 @@
 	margin : 0px;
 	padding : 0px;
 }
+
+body{
+	background-color:red;
+}
+
+
+#fps{
+	position : absolute;
+	left : 80vw;
+	top : 0;
+	width : 20vw;
+	height : 50vh;
+	z-index : -1;
+	background-color : white;
+}
