--- a/test/public/test4/styles.css
+++ b/test/public/test4/styles.css
@@ -18,7 +18,19 @@ body{
 	left : 80vw;
 	top : 0;
 	width : 20vw;
-	height : 50vh;
+	height : 20vh;
 	z-index : -1;
 	background-color : white;
+	display : flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	padding : 5px;
+}
+
+#fps p{
+	width : 100%;
+	text-align: center;
+	margin-top : 15px;
+	margin-bottom : 15px;
 }
