--- a/test/public/test6/styles.css
+++ b/test/public/test6/styles.css
@@ -12,3 +12,29 @@ body{
 	background-color:black;
 }
 
+
+#fps{
+	position : absolute;
+	left : 80vw;
+	top : 0;
+	width : 20vw;
+	height : 20vh;
+	z-index : 1;
+	background-color : white;
+	display : flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	padding : 5px;
+}
+
+#fps p{
+	width : 100%;
+	text-align: center;
+	margin-top : 15px;
+	margin-bottom : 15px;
+}
+
+button{
+	padding : 5px;
+}
